# CARL

./: .codecov.yml  .env  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.bib  CITATION.cff  MANIFEST.in  Makefile  README.md  changelog.md  environment.yaml  index.html  pyproject.toml  requirements.txt  requirements_clone.txt  setup.cfg  setup.py  test_dm_control.py  try_new_carl_env.py
.github/: dist.yaml  tests.yaml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: dist.yaml  docs.yaml  precommit.yaml  publish_release.yml  tests.yaml
CARL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ContextuaRL.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
carl/: __init__.py  play_run.py  train.py
carl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
carl/context/: augmentation.py  context_space.py  sampler.py  sampling.py  search_space_encoding.py  selection.py  utils.py
carl/context_encoders/: AE_Test.py  AE_train.py  Context_AE.py  Context_Beta_VAE.py  Context_VAE.py  Encoder_Hyperband.py  __init__.py  context_ae.py  context_beta_vae.py  context_encoder.py  context_vae.py  encoder_hyperband.py  train_encoder.py
carl/envs/: ___carl_brax_env.py  __init__.py  carl_brax_env.py  carl_env.py  carl_env_new.py
carl/eval/: compare_cfs_hv.py  eval_pb2.py  eval_singlecontext.py  plot_performance.py  record_state_space.py
carl/experiments/: check_for_finished_runs.py
carl/runscripts/: run_evalpolicytransfer.sh  run_retrain_incumbents.sh
carl/tests/: test_CARLEnv.py  test_all_envs.py  test_evaluation_protocol.py
carl/training/: eval_callback.py
carl/utils/: carl_installation.sh  plot_radar.py  render_brax_env.py  slurm_file_builder.py  test_display_forwarding.py  trial_logger.py  types.py
carl_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conwarp.egg-info/: PKG-INFO  SOURCES.txt
docs/: Makefile  api.rst  conf.py  index.rst
docs/source/: benchmarks.rst  cite.rst  experiments.rst  installation.rst  license.md  license.rst  references.md  references.rst
examples/: brax_with_goals.ipynb  carl_with_sb3.py  demo_carracing.py  demo_heuristic_bipedalwalker.py  demo_heuristic_lunarlander.py  fiddle_finger.ipynb  manual_context_switching_with_dm_control.ipynb  manually_switch_contexts_with_dm_control.ipynb  play_car_racing.py  sample_contexts_with_brax.ipynb  try_dm_control.py  try_the_lunarlander_solution_heuristic.ipynb  vary_initial_state_distributions.ipynb  vary_initial_state_distributions_with_classic_control.ipynb
experiments/: Readme.md  check_for_finished_runs.py  requirements_experiments.txt
experiments/attack_on_agents/: README.md  agent_creation.py  analyze_perturbance.ipynb  readme.md  run_perturbance_optimization.py
experiments/benchmark_properties/: render_envs.ipynb
experiments/benchmarking/: README.md  create_context_efficiency_test_contexts.py  create_optimality_gap_runcommands_oracle.py  create_train_test_contexts.py  prepare_optimality_gap_oracle_training.ipynb  print_agent_configs.ipynb  run_training.py  training.py
experiments/benchmarking_smb_ppo/: evaluate_ppo.py  plots.ipynb  train_ppo.py
experiments/carlbench/: README.md  context_logging.py  context_sampling.py  sample_contexts.ipynb
experiments/context_gating/: Readme.md  eval_context_gating.py  plot_context_gating.py  run_context_gating.py  utils.py
experiments/encoder_training/: Readme.md  create_context_database.py  encoder_hyperband.py  train_encoder.py
experiments/evaluation/: README.md  create_latex_figures.ipynb  eval_benchmarking.ipynb  eval_context_efficiency.ipynb  eval_fromeval.ipynb  eval_hidden_on_variations.ipynb  eval_hidden_on_variations_walker.ipynb  eval_hov.ipynb  eval_kirk.ipynb  eval_kirk_ep.ipynb  eval_landing_in_space.ipynb  eval_optimality_gap.ipynb  evaluate.py  find_run_dirs.ipynb  loading.py  run_evaluation.py  utils.py
experiments/evaluation_protocol/: README.md  evaluate_on_protocol.py  evaluation_protocol.py  evaluation_protocol_experiment_definitions.py  evaluation_protocol_utils.py  plot_evaluate_on_protocol.py  plot_traintest_distributions.py
experiments/lstms/: Readme.md  eval_context_gating.py  plot_context_gating.py  run_context_gating.py  run_lstms.py  utils.py
experiments/notebooks/: create_context_efficiency_test_contexts.ipynb  optimal_agent.ipynb  test_dmc.py  test_dmc_wrapper.ipynb  utils.py  visualize_context.ipynb
experiments/pb2/: .gitignore  CITATION.bib  README.md  eval_pb2.py  pb2 (copy).sh  pb2.sh  play_pbt.py  run_pb2.py
experiments/policy_transfer/: Readme.md  eval.py  eval_models.py  plot_gravity_distribution.py  plot_policy_transfer.py  plot_train_gravity.py  policy_transfer.py  run.py  sample_lunarlander_contexts.py  spawner_policy_transfer.py
experiments/task_variation/: README.md  evaluate_models.py  play_run.py  plot_performance.py  plot_task_variation.py
main/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: api.doctree  (+2 more)
myenv/: pyvenv.cfg
notes/: context_efficiency.md  optimality_gap.md  run_context_efficiency.sh  run_optimality_gap.sh
runscripts/: Readme.md  context_gating.sh
src/: __init__.py  analyse_mountaincar_env.py  context_changer.py  context_sampler.py  context_utils.py  hyperparameter.yml  logging.py  meta_env.py  play_run.py  run.py  run_pb2.py  run_stablebaselines.py  slurm_file_builder.py  temp.txt  test_mountaincar.py  train.py  trial_logger.py
test/: test_CARLEnv.py  test_all_envs.py  test_box2d_envs.py  test_brax_env.py  test_carl_mario_env.py  test_context_bounds.py  test_context_sampler.py  test_context_selector.py  test_context_space.py  test_dmc.py  test_evaluation_protocol.py  test_gymnasium_envs.py  test_language_goals.py  test_rna_env.py  test_sampling.py  test_search_space_encoding.py  test_selector.py
version_0.2.0/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+1241 files in other folders)
