[metadata]
name = CARL
version = 0.1
author_email = benjamins@tnt.uni-hannover.de, eimer@tnt.uni-hannover.de
author = Carolin Benjamins & Theresa Eimer <{author_email}>
home_page = https://github.com/automl/{name}
project_urls =
    Documentation = https://carl.readthedocs.io/en/latest/
    Project Page = https://www.tnt.uni-hannover.de/en/project/dacbench/
license = Apache 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    RL
    Generalization
    Context
classifiers =
     Programming Language :: Python :: 3
     Natural Language :: English
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Education
     Intended Audience :: Science/Research
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Topic :: Scientific/Engineering :: Artificial Intelligence
     Topic :: Scientific/Engineering
     Topic :: Software Development

[options]
python_requires = >= 3.9
packages = carl
include-package-data = True
install_requires =
    gym>=0.22.0
    pygame==2.1.0
    scipy>=1.7.0
    ConfigArgParse>=1.5.1
    numpy>=1.19.5
    pandas>=1.3.0
    xvfbwrapper>=0.2.9
    matplotlib>=3.4.2
    optuna>=2.9.1
    dataclasses>=0.6
    numpyencoder>=0.3.0
    pyglet>=1.5.15
    pytablewriter>=0.62.0
    PyYAML>=5.4.1
    tabulate>=0.8.9
    bs4>=0.0.1

[options.package_data]
carl = py.typed

[options.extras_require]
box2d =
    gym[box2d]>=2.3.10
brax =
    brax>=0.0.10
    protobuf>=3.17.3
rna =
    RNA>=0.7.5
mario =
    torch>=1.9.0
    Pillow>=8.3.1
    py4j>=0.10.9.2
experiments =
    ray>=1.5.1
    seaborn>=0.11.1
    sb3_contrib>=1.1.0
    stable_baselines3>=1.1.0
    tensorflow>=2.5.0
dev =
    pytest>=6.1.1
    pytest-cov
    mypy
    black
    flake8
    isort
    pydocstyle
    pre-commit
docs =
    sphinx>=4.2.0
    sphinx-gallery>=0.10.0
    image>=1.5.33
    sphinx-autoapi>=1.8.4


